# pcrtstub

./: .gitignore  configure  configure.ac
mingw-w64-crt/: Makefile.am  configure  configure.ac
mingw-w64-crt/crt/: crtdll.c  crtexe.c
mingw-w64-crt/crtagile/: Makefile.am  Makefile.in  configure  configure.ac  libtool  ms.def
mingw-w64-crt/crtagile/build-aux/: ltmain.sh
mingw-w64-crt/crtagile/s_msvcrt.dll/: Makefile.am  Makefile.in  do_init.c  do_init.h  do_init_empty.c  imp_I10_OUTPUT.S  imp__CxxThrowException.S  imp__Getdays.S  imp__Getmonths.S  imp__Gettnames.S  imp__HUGE.S  imp__Strftime.S  imp__XcptFilter.S  imp___C_specific_handler.S  imp___CppXcptFilter.S  imp___CxxFrameHandler.S  imp___DestructExceptionObject.S  imp___RTCastToVoid.S  imp___RTDynamicCast.S  imp___RTtypeid.S  imp___STRINGTOLD.S  imp____lc_codepage_func.S  imp____lc_collate_cp_func.S  imp____lc_handle_func.S  imp____mb_cur_max_func.S  imp____setlc_active_func.S  imp____unguarded_readlc_active_add_func.S  imp___argc.S  imp___argv.S  imp___badioinfo.S  imp___crtCompareStringA.S  imp___crtCompareStringW.S  imp___crtGetLocaleInfoW.S  imp___crtGetStringTypeW.S  imp___crtLCMapStringA.S  imp___crtLCMapStringW.S  imp___dllonexit.S  imp___doserrno.S  imp___fpecode.S  imp___getmainargs.S  (+2375 more)
mingw-w64-crt/misc/: Makefile  invalid_parameter_handler.c
mingw-w64-tools/genagiledll/: Makefile.am  Makefile.in  configure.ac
mingw-w64-tools/genagiledll/sample/: ms.def
mingw-w64-tools/genagiledll/src/: lexdef.c  makefile.c  makefile.h  output.c  output.h  token.h
mingw-w64-tools/gendef/: Makefile.am
mingw-w64-tools/genstubdll/: Makefile.am  Makefile.in  config.h.in  configure
